feat: add dependency vulnerability security gate

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,3 +36,9 @@ jobs:
         run: |
           pytest || echo "Skipping tests for now"
 
+      # 🔐 Dependency vulnerability scan
+      - name: Dependency vulnerability scan
+        run: |
+          pip install safety
+          safety check --full-report
+
